--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quarta da Limpeza</title>
+    <title>Dia Super Legal</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
@@ -44,7 +44,7 @@
       <img src="./imagens/img6.jpg" alt="Imagem 6"/>
     </div>
 
-   <!-- <div class="slide">
+   <div class="slide">
       <img src="./imagens/img7.jpg" alt="Imagem 7"/>
     </div>
     
@@ -56,7 +56,7 @@
       <img src="./imagens/img9.jpg" alt="Imagem 9"/>
     </div>
 
-    <div class="slide">
+   <!--  <div class="slide">
       <img src="./imagens/img10.jpg" alt="Imagem 10"/>
     </div>
 
